<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="add_habit">Add Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="frequency">Frequency</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="reminder">Reminder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this habit?</string>
    <string name="streak_fmt">Streak: %d</string>
    <string name="remind_on_days">Remind on these days:</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
</resources>
